* Mon Nov 07 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.9-0
- Expanded pupmod::ssldir so that the puppet-specific, '$vardir'
  string no longer appears in the puppet_master audit rule.
- Fixed a bug that resulted in a malformed directory setting for the
  gem-home parameter in puppetserver.conf.
- Bump version to skip Forge version not noted in CHANGELOG.

* Wed Sep 28 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.7-0
- Fix Forge `haveged` dependency name

* Tue Sep 20 2016 Bryan Howard, Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.6-0
- Fixed bash redirection error in puppetagent_cron.erb

* Thu Jun 30 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.5-0
- Use_haveged is now a global catalyst.

* Tue Jun 28 2016 Nick Miller <nick.miller@onyxpoint.com> - 6.0.4-0
- Added logic to make sure java_max_memory never exceeded 12G

* Mon Jun 27 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- Pupmod-haveged included by default to assist with entropy generation.

* Tue Jun 21 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.2-0
- Updated the calls to use_iptables to be able to be disabled globally.

* Thu May 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
- Made master::reports a private class

* Thu Feb 25 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 6.0.0-24
- Added compliance function support

* Wed Feb 24 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-24
- Fix the subscribe on the Service['puppet'] resource to not be a hard coded
  path.

* Thu Dec 24 2015 Trevor Vaughan <tvaughahn@onyxpoint.com> - 6.0.0-23
- Fixed minor logic errors
- Now have configuration changes notify Service['puppetserver'] instead of the
  more efficient Exec. This gets around a race condition when the service is
  restarted and the exec fires before the service has fully restarted.
- Fixed issues with the puppetserver_* helper scripts that surfaced due to
  changes in the HTTP responses from the Puppet Server.
